--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@types/react-dom": "18.2.7",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
-    "mongodb": "^5.7.0",
     "monk": "^7.3.4",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/mongodb": "^4.0.7"
   }
 }
